d3 dom manipulation of local data in memory

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title><%= pageTitle %></title>
+  <script src="https://d3js.org/d3.v5.min.js"></script>
+
 </head>
+
 <body>
   <h1>Hello World</h1>
-  
+
+  <div id="chart">
+    <p>test</p>
+
+  </div>
+
 </body>
+<script>
+  d3.select('#chart')
+    .selectAll('p')
+    .data([1, 2, 3, 4])
+    .enter()
+    .append('p')
+    .text(data => data);</script>
+
 </html>
