--- a/views/home.ejs
+++ b/views/home.ejs
@@ -36,11 +36,20 @@
 
   let selectedBar = null;
 
-  const onClick = (name) => {
+  // const onClick = (name) => {
+  //   selectedbar = name;
+  //   console.log(selectedbar);
+  //   render(uniData)
+  // }
+
+  const onClick = (d) => {
     selectedbar = name;
     console.log(selectedbar);
     render(uniData)
-    //currently when called, it re renders the entire graph and does not destroy the previously rendered bars.
+  }
+
+  function handleClick(d, i) {
+    d3.select(this).classed("selected", !d3.select(this).classed("selected"));
   }
 
   const render = (data) => {
@@ -104,8 +113,8 @@
     barsG.enter()
       .append('rect')
       .merge(barsG)
-      .classed('unselected', true)
-      .on('click', (d) => (onClick(d.name)))
+      .attr('class', 'unselected')
+      .on('click', handleClick)
       .attr('x', (d) => xScale(xValue(d)))
       .attr('width', xScale.bandwidth())
       .attr('height', (d) => innerHeight - (yScale(yValue(d))))
@@ -120,8 +129,6 @@
       .text('University Average Teaching Scores');
   };
   render(uniData);
-
-
 
 
 
