--- a/views/home.ejs
+++ b/views/home.ejs
@@ -101,7 +101,7 @@
       .attr('y', 40);
 
     let barsG = chartBarsG.selectAll('rect')
-      .data(data)
+      .data(data);
 
     barsG.enter()
       .append('rect')
