--- a/views/home.ejs
+++ b/views/home.ejs
@@ -50,8 +50,8 @@
       bottom: 60,
       left: 200
     }
-    const innerHeight = svgHeight - margin.top - margin.bottom;
-    const innerWidth = svgWidth - margin.left - margin.right;
+    const innerHeight = svgHeight - margin.top;
+    const innerWidth = svgWidth - margin.left;
 
     //Scales
     const xScale = d3.scaleBand()
