--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,6 +9,12 @@
   <h1>UK University Ranking Data Comparison App</h1>
 
   <p>Select which university league tables you wish to view or select a comparison overview of all three league tables.</p>
+
+  <div id = buttons>
+    <button><a href = "/pp">The Guardian Ranking Data</a></button>
+    <button><a>The Times Ranking Data</a></button>
+    <button>The Complete University Guide Ranking Data</button>
+  </div>
   
 </body>
 </html>
