--- a/public/css/guardianDefault.css
+++ b/public/css/guardianDefault.css
@@ -8,6 +8,19 @@ h1 {
   text-align: center;
 }
 
+div.tooltip {	
+  position: absolute;			
+  text-align: center;			
+  width: 60px;					
+  height: 28px;					
+  padding: 2px;				
+  font: 12px sans-serif;		
+  background: lightsteelblue;	
+  border: 0px;		
+  border-radius: 8px;			
+  pointer-events: none;			
+} 
+
 .unSelected {
   fill: rgb(23, 117, 240);
 }
