--- a/views/completeUniParallelPlot.ejs
+++ b/views/completeUniParallelPlot.ejs
@@ -6,12 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title><%= pageTitle %></title>
   <script src="https://d3js.org/d3.v5.min.js"></script>
-  <link rel="stylesheet" href="/css/guardianParallelPlot.css">
+  <link rel="stylesheet" href="/css/completeUniParallelPlot.css">
 </head>
 
 <body>
 
-  <h1>Guardian Institution Ranking</h1>
+  <h1>Complete University Guide Overall Ranking</h1>
   <div id="data" data-xaxis="<%= passedUniData %>"></div>
 
   <svg id="parallelChart" height="780" width="1800"></svg>
