home button links updated

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,8 +12,8 @@
 
   <div id = buttons>
     <button><a href = "/parallelCoordinatesPlot">The Guardian Ranking Data</a></button>
-    <button><a>The Times Ranking Data</a></button>
-    <button>The Complete University Guide Ranking Data</button>
+    <button><a href = "/">The Times Ranking Data</a></button>
+    <button><a href = "/overall">The Complete University Guide Ranking Data</a></button>
   </div>
   
 </body>
